# mini-scheme-

./: .gitignore  Cargo.toml  Makefile  README_BINARIES.md  TRACING.md  final_test_report.md  json.scm  mini-scheme-values-compiler.py  mini_scheme.md  sample.scm  scheme-values.md  test_cond.scm  test_if_false.scm  test_lambda_first_param.scm  test_let.scm  test_let_loop.scm  test_let_simple.scm  test_let_star.scm  test_scm_files.py  test_simple_loop.scm
.kiro/specs/line-number-table/: design.md  requirements.md  tasks.md
.kiro/specs/mini-scheme-bytecode-compiler/: design.md  requirements.md  tasks.md
.kiro/specs/mini-scheme-frontend/: design.md  requirements.md  tasks.md
.kiro/specs/mini-scheme-test-compliance/: design.md  requirements.md  tasks.md
.kiro/specs/scheme-docstring-support/: design.md  requirements.md  tasks.md
example/: SYNTAX_CATEGORIES.md
example/core/: call_with_values.scm  closure.scm  cond.scm  define.scm  define_var.scm  docstring-for-define.scm  docstring-for-lambda.scm  if.scm  import.scm  lambda.scm  let.scm  let_loop.scm  let_star.scm  let_values.scm
example/data_types/: boolean.scm  char.scm  empty_list.scm  hashtable.scm  list.scm  null.scm  number.scm  string.scm  vector.scm
example/operations/: car.scm  cdr.scm  display.scm  error.scm  for_each.scm  values.scm
examples/: trace_demo.rs  vm_demo.rs
src/: ast.rs  bytecode.rs  compiler.rs  error.rs  lexer.rs  lib.rs  main.rs  object.rs  parser.rs  token.rs  trace.rs  vm.rs
tests/: test_examples.py  test_scm_files.py  validate_ast_structure.py  validate_syntax_categories.py
(+22 files in other folders)
